Clarify alt text

--- a/public/index.html
+++ b/public/index.html
@@ -403,7 +403,7 @@
         </div>
         <div class="spacer"></div>
         <div id="hero-img" class="hero">
-          <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge at sunset" loading="lazy">
+          <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge" loading="lazy">
         </div>
       </div>
       <div class="social-container">
