Use 500px wide images for projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -386,7 +386,7 @@
             rel="noopener noreferrer" aria-label="Read blog post about World Solar Challenge">Blog
             Post</a>
         </div>
-        <div class="card"><img src="SmartGarageDoor.png" alt="Smart Garage Door Screenshot" loading="lazy">
+        <div class="card"><img src="SmartGarageDoor.jpg" alt="Smart Garage Door Screenshot" loading="lazy">
           <h2>Smart Garage Door</h2>
           <p>This project involved designing and building a smart garage door system with internet-connected
             microcontrollers and a companion Android app. The embedded software manages sensors and actuators to control
@@ -407,7 +407,7 @@
             rel="noopener noreferrer" aria-label="Read blog post about Marauder's Map project">Blog
             Post</a>
         </div>
-        <div class="card"><img src="ChrisCartlandWebsite.png" alt="Portfolio Website Screenshot" loading="lazy">
+        <div class="card"><img src="ChrisCartlandWebsite.jpg" alt="Portfolio Website Screenshot" loading="lazy">
           <h2>Portfolio Website</h2>
           <p>I built this portfolio website using minimal CSS and JavaScript to create a responsive and accessible
             experience. The site features a clean, modern design that works seamlessly across all devices while
