Use smaller jpg images

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
     }
 
     .hero-container img {
-      border-radius: 64px;
+      border-radius: 32px;
       height: 100%;
       object-fit: cover;
     }
@@ -283,7 +283,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 16px;
+      border-radius: 32px;
     }
 
     .spacer {
@@ -413,25 +413,25 @@
         <div class="social-item">
           <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's LinkedIn profile">
-            <img src="LinkedIn.png" alt="LinkedIn" loading="lazy">
+            <img src="LinkedIn.jpg" alt="LinkedIn" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's GitHub profile">
-            <img src="GitHub.png" alt="GitHub" loading="lazy">
+            <img src="GitHub.jpg" alt="GitHub" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's Twitter profile">
-            <img src="Twitter.png" alt="Twitter" loading="lazy">
+            <img src="Twitter.jpg" alt="Twitter" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's Threads profile">
-            <img src="Threads.png" alt="Threads" loading="lazy">
+            <img src="Threads.jpg" alt="Threads" loading="lazy">
           </a>
         </div>
       </div>
