Update projects.html to link to website code instead of website

--- a/public/projects.html
+++ b/public/projects.html
@@ -412,8 +412,8 @@
           <p>I built this portfolio website using minimal CSS and JavaScript to create a responsive and accessible
             experience. The site features a clean, modern design that works seamlessly across all devices while
             maintaining strong accessibility standards.</p>
-          <a href="https://chriscart.land" target="_blank" rel="noopener noreferrer"
-            aria-label="View Portfolio Website">Website</a>
+          <a href="https://github.com/cartland/cartland-dev" target="_blank" rel="noopener noreferrer"
+            aria-label="View Portfolio Website">GitHub</a>
         </div>
       </div>
     </main>
