Add ISC LICENSE

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+  ISC License
+  Copyright (c) 2024, Christopher Cartland
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
