--- a/public/playground/card-layout.html
+++ b/public/playground/card-layout.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<!--
+  ISC License
+  Copyright (c) 2024, Christopher Cartland
+-->
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Card Layout</title>
