Add link to chriscart.land in footer

--- a/public/index.html
+++ b/public/index.html
@@ -442,7 +442,7 @@
     </main>
 
     <footer>
-      <p>© 2024 Christopher Cartland</p>
+      <p>© 2024 Christopher Cartland | <a href="https://chriscart.land">chriscart.land</a></p>
     </footer>
   </div>
 
