--- a/public/projects.html
+++ b/public/projects.html
@@ -423,7 +423,7 @@
     </main>
 
     <footer>
-      <p>© 2024 Christopher Cartland</p>
+      <p>© 2024 Christopher Cartland | <a href="https://chriscart.land">chriscart.land</a></p>
     </footer>
   </div>
 
