Center footer in projects.html

--- a/public/projects.html
+++ b/public/projects.html
@@ -298,6 +298,14 @@
       outline-offset: 2px;
     }
 
+    footer {
+      width: 100%; 
+    }
+
+    footer p {
+      text-align: center;
+    }
+
     /* Responsive Design */
     @media (max-width: 600px) {
       .nav-links {
