--- a/public/garage-privacy-policy.html
+++ b/public/garage-privacy-policy.html
@@ -86,7 +86,7 @@
       <footer>
         <h2>Contact Us</h2>
         <p>If you have any questions, please contact us at <a
-            href="mailto:me@chriscartland.com">me@chriscartland.com</a>.</p>
+            href="mailto:chris@chriscart.land">chris@chriscart.land</a>.</p>
       </footer>
     </article>
   </main>
