Add Google TV project

--- a/public/projects.html
+++ b/public/projects.html
@@ -387,6 +387,14 @@
           <a href="https://goo.gle/AndroidBuildTime" target="_blank" rel="noopener noreferrer"
             aria-label="Watch Android Build Time podcast">Podcast</a>
         </div>
+        <div class="card"><img src="GoogleTVWirecutter.jpg  " alt="Google TV Interface" loading="lazy">
+          <h2>Google TV App Ecosystem</h2>
+          <p>I bootstrapped the Google TV app ecosystem by working with top streaming services to build and launch their apps. 
+            The platform's success led Wirecutter to choose Google TV devices as both their top and budget picks for streaming 
+            devices multiple years in a row, citing the seamless app integration with the system.</p>
+          <a href="https://www.nytimes.com/wirecutter/reviews/best-media-streamers/" target="_blank" 
+            rel="noopener noreferrer" aria-label="Read Wirecutter's review of Google TV">Wirecutter</a>
+        </div>
         <div class="card"><img src="WorldSolarChallenge.jpg" alt="World Solar Challenge Sunset" loading="lazy">
           <h2>World Solar Challenge</h2>
           <p>As team lead for CalSol, the UC Berkeley Solar Vehicle Team, I led the development of a solar-powered car
