--- a/public/index.html
+++ b/public/index.html
@@ -415,7 +415,7 @@
         </div>
         <div class="spacer"></div>
         <div id="hero-img" class="hero">
-          <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge" loading="lazy">
+          <img src="/i/GoldenGateBridge.jpg" alt="Golden Gate Bridge" loading="lazy">
         </div>
       </div>
       <div class="social-container">
@@ -425,25 +425,25 @@
         <div class="social-item">
           <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's LinkedIn profile">
-            <img src="LinkedIn.jpg" alt="LinkedIn" loading="lazy">
+            <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's GitHub profile">
-            <img src="GitHub.jpg" alt="GitHub" loading="lazy">
+            <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's Twitter profile">
-            <img src="Twitter.jpg" alt="Twitter" loading="lazy">
+            <img src="/i/Twitter.jpg" alt="Twitter" loading="lazy">
           </a>
         </div>
         <div class="social-item">
           <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
             aria-label="Visit Christopher Cartland's Threads profile">
-            <img src="Threads.jpg" alt="Threads" loading="lazy">
+            <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
           </a>
         </div>
       </div>
