--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     body {
       background-color: var(--background-color);
       font-family: 'Roboto', sans-serif;
-      font-size: 14px;
+      font-size: 1.2em;
       color: var(--color);
       margin: 0;
     }
@@ -84,6 +84,33 @@
 
     header {
       width: 100%;
+    }
+
+    .image-gradient-container {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      border-radius: 4px;
+      overflow: hidden;
+    }
+
+    .image-gradient-container::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+      z-index: 1;
+    }
+
+    .image-gradient-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      position: relative;
     }
 
     /* Header and Navigation */
@@ -268,20 +295,30 @@
 
     /* Social Section */
     .social-container {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 16px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       margin-top: 32px;
     }
 
     .social-header {
       width: 100%;
-      grid-column: 1 / -1;
       text-align: center;
-      margin-bottom: 16px;
+    }
+
+    .social-items-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 16px;
+      flex-wrap: wrap;
+      max-width: 432px; /* (100px * 4) + (16px * 3) */
     }
 
     .social-item {
+      width: 100px;
+      flex: 0 0 32px;
       aspect-ratio: 1;
     }
 
@@ -289,7 +326,6 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 32px;
     }
 
     .spacer {
@@ -347,33 +383,6 @@
         height: auto;
         object-fit: contain;
       }
-    }
-
-    .image-gradient-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      border-radius: 32px;
-      overflow: hidden;
-    }
-
-    .image-gradient-container::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-      z-index: 1;
-    }
-
-    .image-gradient-container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      position: relative;
     }
   </style>
 </head>
@@ -445,39 +454,41 @@
       </div>
       <div class="social-container">
         <div class="social-header">
-          <h1>Find me on the Internet</h1>
+          <h2>Find me on the Internet</h2>
         </div>
-        <div class="social-item">
-          <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
-            aria-label="Visit Christopher Cartland's LinkedIn profile">
-            <div class="image-gradient-container">
-              <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
-            </div>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
-            aria-label="Visit Christopher Cartland's GitHub profile">
-            <div class="image-gradient-container">
-              <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
-            </div>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
-            aria-label="Visit Christopher Cartland's Twitter profile">
-            <div class="image-gradient-container">
-              <img src="/i/Twitter.jpg" alt="Twitter" loading="lazy">
-            </div>
-          </a>
-        </div>
-        <div class="social-item">
-          <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
-            aria-label="Visit Christopher Cartland's Threads profile">
-            <div class="image-gradient-container">
-              <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
-            </div>
-          </a>
+        <div class="social-items-row">
+          <div class="social-item">
+            <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
+              aria-label="Visit Christopher Cartland's LinkedIn profile">
+              <div class="image-gradient-container">
+                <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
+              </div>
+            </a>
+          </div>
+          <div class="social-item">
+            <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
+              aria-label="Visit Christopher Cartland's GitHub profile">
+              <div class="image-gradient-container">
+                <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
+              </div>
+            </a>
+          </div>
+          <div class="social-item">
+            <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
+              aria-label="Visit Christopher Cartland's Twitter profile">
+              <div class="image-gradient-container">
+                <img src="/i/Twitter.jpg" alt="Twitter" loading="lazy">
+              </div>
+            </a>
+          </div>
+          <div class="social-item">
+            <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
+              aria-label="Visit Christopher Cartland's Threads profile">
+              <div class="image-gradient-container">
+                <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </main>
