--- a/public/projects.html
+++ b/public/projects.html
@@ -50,7 +50,7 @@
     body {
       background-color: var(--background-color);
       font-family: 'Roboto', sans-serif;
-      font-size: 14px;
+      font-size: 1.2em;
       color: var(--color);
       margin: 0;
     }
@@ -84,6 +84,31 @@
 
     header {
       width: 100%;
+    }
+
+    .image-gradient-container {
+      position: relative;
+      border-radius: 32px;
+      overflow: hidden;
+    }
+
+    .image-gradient-container::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+      z-index: 1
+    }
+
+    .image-gradient-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      position: relative;
     }
 
     .header-container {
@@ -329,31 +354,6 @@
       .project-container .section-header .half {
         width: 100%;
       }
-    }
-
-    .image-gradient-container {
-      position: relative;
-      border-radius: 32px;
-      overflow: hidden;
-    }
-
-    .image-gradient-container::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
-      z-index: 1
-    }
-
-    .image-gradient-container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      position: relative;
     }
   </style>
 </head>
