--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,8 @@
     }
 
     .image-gradient-container {
-      width: 100%;
-      height: 100%;
       position: relative;
-      border-radius: 4px;
+      border-radius: 8px;
       overflow: hidden;
     }
 
@@ -111,6 +109,7 @@
       object-fit: cover;
       display: block;
       position: relative;
+      border-radius: 8px;
     }
 
     /* Header and Navigation */
@@ -308,24 +307,32 @@
     }
 
     .social-items-row {
+      width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: center;
       gap: 16px;
       flex-wrap: wrap;
-      max-width: 432px; /* (100px * 4) + (16px * 3) */
     }
 
     .social-item {
-      width: 100px;
-      flex: 0 0 32px;
-      aspect-ratio: 1;
+      width: 36px;
     }
 
     .social-item img {
       width: 100%;
-      height: 100%;
+      aspect-ratio: 1;
       object-fit: cover;
+    }
+
+    .social-item a {
+      text-decoration: none;
+      text-align: center;
+    }
+
+    .social-item p {
+      margin: 2px 0 0 0;
+      font-size: 0.4em;
     }
 
     .spacer {
@@ -382,6 +389,11 @@
       .hero-container img {
         height: auto;
         object-fit: contain;
+      }
+
+      .social-items-row {
+        gap: 16px;
+        padding: 0 16px;
       }
     }
   </style>
@@ -463,6 +475,7 @@
               <div class="image-gradient-container">
                 <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
               </div>
+              <p>LinkedIn</p>
             </a>
           </div>
           <div class="social-item">
@@ -471,14 +484,16 @@
               <div class="image-gradient-container">
                 <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
               </div>
+              <p>GitHub</p>
             </a>
           </div>
           <div class="social-item">
-            <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
-              aria-label="Visit Christopher Cartland's Twitter profile">
+            <a href="https://x.com/LandOfCart" target="_blank" rel="noopener noreferrer"
+              aria-label="Visit Christopher Cartland's X profile">
               <div class="image-gradient-container">
-                <img src="/i/Twitter.jpg" alt="Twitter" loading="lazy">
+                <img src="/i/X.jpg" alt="X" loading="lazy">
               </div>
+              <p>X</p>
             </a>
           </div>
           <div class="social-item">
@@ -487,6 +502,7 @@
               <div class="image-gradient-container">
                 <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
               </div>
+              <p>Threads</p>
             </a>
           </div>
         </div>
