Update project descriptions for ABT and website

--- a/public/projects.html
+++ b/public/projects.html
@@ -412,8 +412,9 @@
             </div>
           </a>
           <h2>Android Build Time</h2>
-          <p>I host "Android Build Time," a video podcast series produced by the Android team at Google. I interview
-            developers about apps and technologies relevant to professional Android developers.
+          <p>I host "Android Build Time," a video podcast series produced by the Android team at Google. Through in-depth 
+            technical conversations with Android developers, I interview developers about apps and technologies relevant to 
+            professional Android developers.
           </p>
           <a href="https://goo.gle/AndroidBuildTime" target="_blank" rel="noopener noreferrer"
             aria-label="Watch Android Build Time podcast" class="project-link">Podcast</a>
@@ -483,8 +484,8 @@
           <h2>Smart Garage Door</h2>
           <p>This project involved designing and building a smart garage door system with internet-connected
             microcontrollers and a companion Android app. The embedded software manages sensors and actuators to control
-            the garage door, while the Android app provides a user interface with features like push notifications for
-            door status and remote control.
+            the garage door, while the Android app provides push notifications and remote control - saving us from 
+            accidentally leaving the door open and giving us peace of mind when we're away from home.
           </p>
           <a href="https://github.com/cartland/SmartGarageDoor" target="_blank" rel="noopener noreferrer"
             aria-label="View Smart Garage Door project on GitHub" class="project-link">GitHub</a>
