Add Autostereogram project

--- a/public/projects.html
+++ b/public/projects.html
@@ -535,6 +535,20 @@
             rel="noopener noreferrer" aria-label="Read blog post about Instant Runoff Voting" class="project-link">Blog Post</a>
         </div>
         <div class="card">
+          <a href="https://github.com/cartland/imagic" target="_blank" rel="noopener noreferrer">
+            <div class="image-gradient-container">
+              <img src="/i/Autostereogram.jpg" alt="Autostereogram Example" loading="lazy">
+            </div>
+          </a>
+          <h2>Autostereogram Generator</h2>
+          <p>I wrote software in Go to generate autostereograms (also known as "Magic Eye" images). Starting from first
+            principles and my experience viewing these 3D illusions, I developed a library that creates autostereograms from
+            depth maps and pattern images. The project includes both a command-line tool and a web service hosted on Google
+            App Engine, making it easy for others to create their own 3D illusions.</p>
+          <a href="https://github.com/cartland/imagic" target="_blank" rel="noopener noreferrer"
+            aria-label="View Autostereogram Generator on GitHub" class="project-link">GitHub</a>
+        </div>
+        <div class="card">
           <a href="https://github.com/cartland/cartland-dev" target="_blank" rel="noopener noreferrer">
             <div class="image-gradient-container">
               <img src="/i/ChrisCartlandWebsite.jpg" alt="Portfolio Website Screenshot" loading="lazy">
