Split hero into two sections for better format

--- a/public/index.html
+++ b/public/index.html
@@ -352,7 +352,7 @@
     }
 
     footer {
-      width: 100%; 
+      width: 100%;
     }
 
     footer p {
@@ -395,6 +395,17 @@
         gap: 16px;
         padding: 0 16px;
       }
+    }
+
+    /* Intro Section */
+    .intro-container {
+      width: 100%;
+      margin-top: 32px;
+    }
+
+    .intro-container p {
+      margin-top: 0;
+      margin-bottom: 16px;
     }
   </style>
 </head>
@@ -442,7 +453,14 @@
         <div id="hero-text" class="hero">
           <h1>Software Engineer and Tech Maker</h1>
           <p>Mobile / Android / Embedded / Serverless</p>
+        </div>
+        <div class="spacer"></div>
+        <div id="hero-img" class="hero">
+          <img src="/i/GoldenGateBridge.jpg" alt="Golden Gate Bridge" loading="lazy">
+        </div>
+      </div>
 
+      <div class="intro-container">
           <p>As an engineer with 12 years of experience with Developer Relations at Google, I've built software for
             Android mobile devices,
             serverless applications, and internet-connected cars and TVs. My focus has been on developer APIs that
@@ -458,12 +476,8 @@
             and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
 
           <p>Learn more about some of my <a href="projects">Projects</a>.</p>
-        </div>
-        <div class="spacer"></div>
-        <div id="hero-img" class="hero">
-          <img src="/i/GoldenGateBridge.jpg" alt="Golden Gate Bridge" loading="lazy">
-        </div>
       </div>
+
       <div class="social-container">
         <div class="social-header">
           <h2>Find me on the Internet</h2>
