Make social links better on some small screens

--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
     }
 
     .social-item {
-      width: 36px;
+      width: 66px;
     }
 
     .social-item img {
@@ -332,7 +332,6 @@
 
     .social-item p {
       margin: 2px 0 0 0;
-      font-size: 0.5em;
     }
 
     .spacer {
@@ -395,6 +394,14 @@
         gap: 16px;
         padding: 0 16px;
       }
+
+      .social-item {
+        width: 48px;
+      }
+
+      .social-item p {
+        font-size: 0.7em;
+      }
     }
   </style>
 </head>
@@ -450,21 +457,21 @@
       </div>
 
       <div class="intro-container">
-          <p>As an engineer with 12 years of experience with Developer Relations at Google, I've built software for
-            Android mobile devices,
-            serverless applications, and internet-connected cars and TVs. My focus has been on developer APIs that
-            enable
-            professionals to create innovative Android experiences.</p>
+        <p>As an engineer with 12 years of experience with Developer Relations at Google, I've built software for
+          Android mobile devices,
+          serverless applications, and internet-connected cars and TVs. My focus has been on developer APIs that
+          enable
+          professionals to create innovative Android experiences.</p>
 
-          <p>Beyond my work at Google, I'm driven by a passion for sustainable technology. In college, I led a team that
-            built a solar-powered car for the World Solar Challenge, where we raced a street-legal vehicle across
-            Australia.</p>
+        <p>Beyond my work at Google, I'm driven by a passion for sustainable technology. In college, I led a team that
+          built a solar-powered car for the World Solar Challenge, where we raced a street-legal vehicle across
+          Australia.</p>
 
-          <p>I continue to explore my passion for software by building projects in my free time, such as interactive
-            art,
-            and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
+        <p>I continue to explore my passion for software by building projects in my free time, such as interactive
+          art,
+          and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
 
-          <p>Learn more about some of my <a href="projects">Projects</a>.</p>
+        <p>Learn more about some of my <a href="projects">Projects</a>.</p>
       </div>
 
       <div class="social-container">
