--- a/public/projects.html
+++ b/public/projects.html
@@ -73,8 +73,8 @@
     /* Typography */
     h1 {
       font-weight: normal;
-      margin-top: 8px;
-      margin-bottom: 8px;
+      margin-top: 0px;
+      margin-bottom: 0px;
       font-size: 3em;
     }
 
@@ -360,10 +360,12 @@
       list-style-type: none;
       padding: 0;
       margin: 0;
+      font-size: 0.9em;
     }
 
     .section-header ul li {
-      margin-bottom: 8px;
+      margin-bottom: 4px;
+      line-height: 1.2;
     }
 
     .section-header ul a {
