--- a/public/projects.html
+++ b/public/projects.html
@@ -361,11 +361,14 @@
       padding: 0;
       margin: 0;
       font-size: 0.9em;
+      columns: 2;
+      column-gap: 20px;
     }
 
     .section-header ul li {
       margin-bottom: 4px;
       line-height: 1.2;
+      break-inside: avoid;
     }
 
     .section-header ul a {
@@ -374,6 +377,13 @@
 
     .section-header ul a:hover {
       text-decoration: underline;
+    }
+
+    /* For mobile screens, revert to single column */
+    @media (max-width: 600px) {
+      .section-header ul {
+        columns: 1;
+      }
     }
   </style>
 </head>
