Add CalSol image banner on home page

--- a/public/index.html
+++ b/public/index.html
@@ -292,13 +292,24 @@
       object-fit: cover;
     }
 
+    .big-image-container {
+      width: 100%;
+    }
+
+    .big-image-container img {
+      width: 100%;
+      border-radius: 32px;
+      object-fit: cover;
+    }
+
     /* Social Section */
     .social-container {
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 32px;
+      padding-left: 8px;
+      padding-right: 8px;
     }
 
     .social-header {
@@ -474,54 +485,60 @@
         <p>Learn more about some of my <a href="projects">Projects</a>.</p>
       </div>
 
-      <div class="social-container">
-        <div class="social-header">
-          <h2>Find me on the Internet</h2>
-        </div>
-        <div class="social-items-row">
-          <div class="social-item">
-            <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
-              aria-label="Visit Christopher Cartland's LinkedIn profile">
-              <div class="image-gradient-container">
-                <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
-              </div>
-              <p>LinkedIn</p>
-            </a>
-          </div>
-          <div class="social-item">
-            <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
-              aria-label="Visit Christopher Cartland's GitHub profile">
-              <div class="image-gradient-container">
-                <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
-              </div>
-              <p>GitHub</p>
-            </a>
-          </div>
-          <div class="social-item">
-            <a href="https://x.com/LandOfCart" target="_blank" rel="noopener noreferrer"
-              aria-label="Visit Christopher Cartland's X profile">
-              <div class="image-gradient-container">
-                <img src="/i/X.jpg" alt="X" loading="lazy">
-              </div>
-              <p>X</p>
-            </a>
-          </div>
-          <div class="social-item">
-            <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
-              aria-label="Visit Christopher Cartland's Threads profile">
-              <div class="image-gradient-container">
-                <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
-              </div>
-              <p>Threads</p>
-            </a>
-          </div>
-        </div>
+      <div class="big-image-container">
+        <img src="/i/CalSolFirstPlaceFormulaSun2017.jpg"
+          alt="CalSol crossing the finish line for first place at Formula Sun Grand Prix 2017" loading="lazy">
       </div>
-    </main>
+  </div>
 
-    <footer>
-      <p>© 2024 Christopher Cartland | <a href="https://chriscart.land">chriscart.land</a></p>
-    </footer>
+  <div class="social-container">
+    <div class="social-header">
+      <h2>Find me on the Internet</h2>
+    </div>
+    <div class="social-items-row">
+      <div class="social-item">
+        <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
+          aria-label="Visit Christopher Cartland's LinkedIn profile">
+          <div class="image-gradient-container">
+            <img src="/i/LinkedIn.jpg" alt="LinkedIn" loading="lazy">
+          </div>
+          <p>LinkedIn</p>
+        </a>
+      </div>
+      <div class="social-item">
+        <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
+          aria-label="Visit Christopher Cartland's GitHub profile">
+          <div class="image-gradient-container">
+            <img src="/i/GitHub.jpg" alt="GitHub" loading="lazy">
+          </div>
+          <p>GitHub</p>
+        </a>
+      </div>
+      <div class="social-item">
+        <a href="https://x.com/LandOfCart" target="_blank" rel="noopener noreferrer"
+          aria-label="Visit Christopher Cartland's X profile">
+          <div class="image-gradient-container">
+            <img src="/i/X.jpg" alt="X" loading="lazy">
+          </div>
+          <p>X</p>
+        </a>
+      </div>
+      <div class="social-item">
+        <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
+          aria-label="Visit Christopher Cartland's Threads profile">
+          <div class="image-gradient-container">
+            <img src="/i/Threads.jpg" alt="Threads" loading="lazy">
+          </div>
+          <p>Threads</p>
+        </a>
+      </div>
+    </div>
+  </div>
+  </main>
+
+  <footer>
+    <p>© 2024 Christopher Cartland | <a href="https://chriscart.land">chriscart.land</a></p>
+  </footer>
   </div>
 
   <script>
