--- a/public/projects.html
+++ b/public/projects.html
@@ -394,13 +394,20 @@
       }
     }
 
-    /* Add highlight effect when card is targeted by URL hash */
     :target {
+      position: relative;
+    }
+
+    :target::before {
+      content: '';
+      position: absolute;
+      top: -16px;
+      left: -16px;
+      right: -16px;
+      bottom: -16px;
       background-color: rgba(255, 255, 255, 0.1);
-      border-top-left-radius: 40px;
-      border-top-right-radius: 40px;
-      padding: 8px;
-      margin: -8px;
+      border-radius: 40px;
+      z-index: -1;
     }
   </style>
 </head>
@@ -753,7 +760,12 @@
         card.addEventListener('click', function(event) {
           // Don't change hash if clicking on a link
           if (!event.target.closest('a')) {
-            window.location.hash = this.id;
+            console.log('clicked on card', this.id, window.location.hash);
+            if (window.location.hash !== ("#" + this.id)) {
+              window.location.hash = this.id;
+            } else {
+              window.location.hash = '###';
+            }
           }
         });
       });
