Make background color solid and darker

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
     :root {
       --color: #ffffff;
       --color-link: #cccccc;
-      --background-color: #263551;
-      --background-color-accent: #3d5685;
+      --background-color: #0f1724;
       --background-color-overlay: rgba(0, 0, 0, 0.5);
       --color-overlay: #000000;
     }
@@ -53,7 +52,6 @@
       font-size: 1.1em;
       color: var(--color);
       margin: 0;
-      background-image: repeating-linear-gradient(to bottom, var(--background-color-accent) 0px, var(--background-color) 400px, var(--background-color-accent) 800px);
     }
 
     .container {
