--- a/public/projects.html
+++ b/public/projects.html
@@ -24,10 +24,10 @@
     :root {
       --color: #ffffff;
       --color-link: #cccccc;
-      --background-color: #263551;
-      --background-color-accent: #3d5685;
+      --background-color: #0f1724;
       --background-color-overlay: rgba(0, 0, 0, 0.5);
       --color-overlay: #000000;
+      --color-card-background-selected: rgba(255, 255, 255, 0.2);
     }
 
     /* Skip Link */
@@ -50,10 +50,8 @@
     body {
       background-color: var(--background-color);
       font-family: 'Roboto', sans-serif;
-      font-size: 1.1em;
       color: var(--color);
       margin: 0;
-      background-image: repeating-linear-gradient(to bottom, var(--background-color-accent) 0px, var(--background-color) 400px, var(--background-color-accent) 800px);
     }
 
     .container {
@@ -280,7 +278,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       justify-content: center;
-      gap: 16px;
+      gap: 32px;
     }
 
     .project-container .section-header {
@@ -304,6 +302,21 @@
       transition: background-color 0.3s ease;
     }
 
+    .card:target {
+      position: relative;
+    }
+
+    .card:target::before {
+      content: '';
+      position: absolute;
+      top: -16px;
+      left: -16px;
+      right: -16px;
+      bottom: -16px;
+      background-color: var(--color-card-background-selected);
+      border-radius: 40px;
+      z-index: -1;
+    }
     .card img {
       width: 100%;
       aspect-ratio: 1;
@@ -392,22 +405,6 @@
       .section-header ul {
         columns: 1;
       }
-    }
-
-    :target {
-      position: relative;
-    }
-
-    :target::before {
-      content: '';
-      position: absolute;
-      top: -16px;
-      left: -16px;
-      right: -16px;
-      bottom: -16px;
-      background-color: rgba(255, 255, 255, 0.1);
-      border-radius: 40px;
-      z-index: -1;
     }
   </style>
 </head>
@@ -758,7 +755,6 @@
       const cards = document.querySelectorAll('.card');
       cards.forEach(card => {
         card.addEventListener('click', function(event) {
-          // Don't change hash if clicking on a link
           if (!event.target.closest('a')) {
             if (window.location.hash !== ("#" + this.id)) {
               window.location.hash = this.id;
