Put Projects header on separate line, and TOC on left

--- a/public/projects.html
+++ b/public/projects.html
@@ -287,7 +287,7 @@
       margin-bottom: 16px;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: baseline;
     }
 
     .project-container .section-header .half {
@@ -453,16 +453,8 @@
 
     <main id="main-content">
       <div class="project-container">
+        <h1>Projects</h1>
         <div class="section-header">
-          <div class="half">
-            <h1>Projects</h1>
-            <p>Here are some of my key projects, spanning from large-scale Google initiatives like Google TV and
-              COVID-19 Exposure Notifications to innovative personal projects in sustainable technology and interactive
-              art.
-              These projects showcase my expertise in developer platforms, embedded systems, and creative technology
-              solutions.</p>
-          </div>
-          <div class="spacer"></div>
           <div class="half">
             <ul>
               <li><a href="#android-build-time">Android Build Time</a></li>
@@ -477,6 +469,14 @@
               <li><a href="#autostereogram">Autostereogram Generator</a></li>
               <li><a href="#portfolio">Portfolio Website</a></li>
             </ul>
+          </div>
+          <div class="spacer"></div>
+          <div class="half">
+            <p>Here are some of my key projects, spanning from large-scale Google initiatives like Google TV and
+              COVID-19 Exposure Notifications to innovative personal projects in sustainable technology and interactive
+              art.
+              These projects showcase my expertise in developer platforms, embedded systems, and creative technology
+              solutions.</p>
           </div>
         </div>
         <div class="card" id="android-build-time">
