Display TOC on left on wide windows

--- a/public/projects.html
+++ b/public/projects.html
@@ -250,6 +250,13 @@
       background-color: var(--color-overlay);
     }
 
+    .section-header {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      align-items: center;
+    }
+
     .section-header ul {
       list-style-type: none;
       padding: 0;
@@ -392,8 +399,6 @@
         display: block;
       }
 
-
-
       .project-container {
         grid-template-columns: 1fr;
       }
@@ -456,6 +461,14 @@
         <h1>Projects</h1>
         <div class="section-header">
           <div class="half">
+            <p>Here are some of my key projects, spanning from large-scale Google initiatives like Google TV and
+              COVID-19 Exposure Notifications to innovative personal projects in sustainable technology and interactive
+              art.
+              These projects showcase my expertise in developer platforms, embedded systems, and creative technology
+              solutions.</p>
+          </div>
+          <div class="spacer"></div>
+          <div class="half">
             <ul>
               <li><a href="#android-build-time">Android Build Time</a></li>
               <li><a href="#google-tv">Google TV App Ecosystem</a></li>
@@ -469,14 +482,6 @@
               <li><a href="#autostereogram">Autostereogram Generator</a></li>
               <li><a href="#portfolio">Portfolio Website</a></li>
             </ul>
-          </div>
-          <div class="spacer"></div>
-          <div class="half">
-            <p>Here are some of my key projects, spanning from large-scale Google initiatives like Google TV and
-              COVID-19 Exposure Notifications to innovative personal projects in sustainable technology and interactive
-              art.
-              These projects showcase my expertise in developer platforms, embedded systems, and creative technology
-              solutions.</p>
           </div>
         </div>
         <div class="card" id="android-build-time">
