Add project Computer History Museum

--- a/public/projects.html
+++ b/public/projects.html
@@ -480,6 +480,7 @@
               <li><a href="#google-sign-in">Google Sign-In</a></li>
               <li><a href="#instant-runoff">Instant Runoff Voting</a></li>
               <li><a href="#autostereogram">Autostereogram Generator</a></li>
+              <li><a href="#computer-history-museum">Computer History Museum</a></li>
               <li><a href="#portfolio">Portfolio Website</a></li>
             </ul>
           </div>
@@ -637,6 +638,18 @@
           <a href="https://github.com/cartland/imagic" target="_blank" rel="noopener noreferrer"
             aria-label="View Autostereogram Generator on GitHub" class="project-link">GitHub</a>
           <div class="tags">Go Programming, Image Processing, Algorithms</div>
+        </div>
+        <div class="card" id="computer-history-museum">
+          <div class="image-gradient-container">
+            <img src="/i/ComputerHistoryMuseum.jpg" alt="Computer History Museum Screenshot" loading="lazy">
+          </div>
+          <h2>Computer History Museum</h2>
+          <p>I shared my computer science journey at the Computer History Museum's Design Code Build series in 2019. The
+            talk focused on inspiring the next generation of technologists by discussing my path from early programming
+            experiences to working on large-scale technology projects that impact millions of users.</p>
+          <a href="https://youtube.com/watch?v=uS26m1QaEH4" target="_blank" rel="noopener noreferrer"
+            aria-label="Watch Computer History Museum talk on YouTube" class="project-link">YouTube</a>
+          <div class="tags">Public Speaking, Computer Science Education, Technical Communication</div>
         </div>
         <div class="card" id="portfolio">
           <div class="image-gradient-container">
