Add project " Alumni Profile\

--- a/public/projects.html
+++ b/public/projects.html
@@ -481,6 +481,7 @@
               <li><a href="#instant-runoff">Instant Runoff Voting</a></li>
               <li><a href="#autostereogram">Autostereogram Generator</a></li>
               <li><a href="#computer-history-museum">Computer History Museum</a></li>
+              <li><a href="#templeton-alumni">Templeton Alumni Profile</a></li>
               <li><a href="#portfolio">Portfolio Website</a></li>
             </ul>
           </div>
@@ -650,6 +651,18 @@
           <a href="https://youtube.com/watch?v=uS26m1QaEH4" target="_blank" rel="noopener noreferrer"
             aria-label="Watch Computer History Museum talk on YouTube" class="project-link">YouTube</a>
           <div class="tags">Public Speaking, Computer Science Education, Technical Communication</div>
+        </div>
+        <div class="card" id="templeton-alumni">
+          <div class="image-gradient-container">
+            <img src="/i/TempletonAlumni.jpg" alt="Templeton Alumni Profile" loading="lazy">
+          </div>
+          <h2>Templeton Alumni Profile</h2>
+          <p>My high school invited me to share how my experiences shaped my future career in technology.
+            In this alumni profile, I discuss my introduction to computer science and the environment at Templeton that
+            helped lay the foundation for my journey into software development and my work at Google.</p>
+          <a href="https://www.youtube.com/watch?v=_U_oxDDa3x8" target="_blank" rel="noopener noreferrer"
+            aria-label="Watch Templeton Alumni Profile video" class="project-link">Watch Video</a>
+          <div class="tags">Public Speaking</div>
         </div>
         <div class="card" id="portfolio">
           <div class="image-gradient-container">
