--- a/public/projects.html
+++ b/public/projects.html
@@ -50,6 +50,7 @@
     body {
       background-color: var(--background-color);
       font-family: 'Roboto', sans-serif;
+      font-size: 0.9em;
       color: var(--color);
       margin: 0;
     }
