Add project Berkeley Alumni Spotlight

--- a/public/projects.html
+++ b/public/projects.html
@@ -483,6 +483,7 @@
               <li><a href="#autostereogram">Autostereogram Generator</a></li>
               <li><a href="#computer-history-museum">Computer History Museum</a></li>
               <li><a href="#templeton-alumni">Templeton Alumni Profile</a></li>
+              <li><a href="#berkeley-alumni">Berkeley Alumni Spotlight</a></li>
               <li><a href="#portfolio">Portfolio Website</a></li>
             </ul>
           </div>
@@ -664,6 +665,19 @@
           <a href="https://www.youtube.com/watch?v=_U_oxDDa3x8" target="_blank" rel="noopener noreferrer"
             aria-label="Watch Templeton Alumni Profile video" class="project-link">Watch Video</a>
           <div class="tags">Public Speaking</div>
+        </div>
+        <div class="card" id="berkeley-alumni">
+          <div class="image-gradient-container">
+            <img src="/i/BerkeleyAlumni.jpg" alt="Berkeley Engineering Alumni Spotlight" loading="lazy">
+          </div>
+          <h2>Berkeley Alumni Spotlight</h2>
+          <p>UC Berkeley Engineering featured me in their alumni spotlight, where I shared my journey from studying AI with
+            Professor Dan Klein to leading developer outreach at Google. I discussed how my experiences at Cal,
+            including racing a solar-powered car across Australia with CalSol, shaped my approach to solving complex
+            technical challenges and working with ambiguous problems.</p>
+          <a href="https://engineering.berkeley.edu/christopher-cartland/" target="_blank" rel="noopener noreferrer"
+            aria-label="Read Berkeley Engineering Alumni Spotlight" class="project-link">Profile</a>
+          <div class="tags">Public Speaking, Engineering Leadership</div>
         </div>
         <div class="card" id="portfolio">
           <div class="image-gradient-container">
