--- a/public/projects.html
+++ b/public/projects.html
@@ -364,6 +364,8 @@
       font-size: 0.5em;
       color: var(--color-link);
       margin-top: 8px;
+      padding-left: 18px;
+      padding-right: 18px;
     }
 
     .spacer {
