Add project for Pandora Music Alarms

--- a/public/projects.html
+++ b/public/projects.html
@@ -476,6 +476,7 @@
               <li><a href="#android-build-time">Android Build Time</a></li>
               <li><a href="#google-tv">Google TV App Ecosystem</a></li>
               <li><a href="#android-auto">Android Auto Apps</a></li>
+              <li><a href="#music-alarms">Music Alarms on Android</a></li>
               <li><a href="#exposure-notifications">COVID-19 Exposure Notifications</a></li>
               <li><a href="#google-sign-in">Google Sign-In</a></li>
               <li><a href="#world-solar-challenge">World Solar Challenge</a></li>
@@ -534,6 +535,18 @@
             class="project-link">Blog Post</a>
           <div class="tags">Android Auto, Automotive, Cars, Developer Relations, Audio Streaming Apps
           </div>
+        </div>
+        <div class="card" id="music-alarms">
+          <div class="image-gradient-container">
+            <img src="/i/PandoraMusicAlarms.jpg" alt="Music Alarms on Android" loading="lazy">
+          </div>
+          <h2>Music Alarms on Android</h2>
+          <p>I designed the API integration for music alarms on Android, a feature that allows users to set alarms that play music
+            from their music app. The feature was launched in 2019 and enabled Pandora to integrate into the Clock app on Android.
+            Pandora wrote an engineering blog post about the integration.</p>
+          <a href="https://engineering.pandora.com/wake-up-to-pandora-with-the-clock-app-from-google-7859fe7743aa" target="_blank" rel="noopener noreferrer"
+            aria-label="Read blog post about Music Alarms on Android" class="project-link">Blog Post</a>
+          <div class="tags">Android, Music, Developer APIs, Developer Relations</div>
         </div>
         <div class="card" id="exposure-notifications">
           <div class="image-gradient-container">
